--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,7 +41,7 @@ body
 				.description
 					font-size: 20px
 				.buttons
-					button
+					a
 						@extend .transition
 						border: none
 						background: transparent
@@ -615,7 +615,7 @@ body
 			.row
 				ul
 					list-style-type: disc
-					margin: 0 20px
+					padding: 0 20px
 				.call-back
 					display: flex
 					flex-wrap: wrap
